2008-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/instsh2.test: Split off testing of `install-sh -C' ...
	* tests/instsh3.test: ... to this new test, requiring non-root.
	* tests/Makefile.am: Adjust.
	* THANKS: Update.
	Report by Theodoros V. Kalamatianos.

2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/nobase.test: Extend test to generated files.

	* tests/nobase-python.test: New test, nobase for python files.
	* tests/Makefile.am: Update.

	* tests/nobase.test: Split off libtool part of nobase.test for
	increased test exposure, to ...
	* tests/nobase-libtool.test: ... this new test.
	* tests/Makefile.am: Update.

2008-01-23  Eric Blake  <ebb9@byu.net>

	Fix color.test when using BSD grep.
	* tests/color.test: Ensure that grep can handle non-printing
	characters.

2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/lisp3.test: Fix typo.

2008-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/mans.am (install-man%SECTION%): Prefer generated manpages
	over distributed ones.
	Report and patch by Peter Breitenlohner.
	* tests/man3.test: New test.
	* tests/Makefile.am: Update.

2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/tar.test: Skip if no appropriate tar was found.

2008-01-19  NightStrike  <nightstrike@gmail.com>

	* doc/automake.texi (Dependency Tracking): Fix typo.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/config-ml.in, lib/config.guess, lib/config.sub,
	lib/symlink-tree: Sync from upstream.

	* Makefile.am (WGET_SV_CVS): Renamed from WGETSGO.
	(WGET_SV_GIT_AC, WGET_SV_GIT_GL, WGET_GCC): New.
	(fetch): Update to match current upstream locations.

2008-01-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (DESTDIR, Built sources example): Fix wording.
	* THANKS: Update.
	Reports and suggestions by William Pursell and nightstrike@gmail.com.

2008-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Do not fail if `autoupdate' is not present.