@@ -1,5 +1,8 @@
 2008-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/subst3.test: New test.
+	* tests/Makefile.am: Update.
+
 	* tests/instsh2.test: Split off testing of `install-sh -C' ...
 	* tests/instsh3.test: ... to this new test, requiring non-root.
 	* tests/Makefile.am: Adjust.
